--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,7 +125,7 @@ h6{
     text-align: center;
 }
 .copyright{
-    font-family: 'Open Sans';
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
@@ -137,4 +137,41 @@ h6{
 }
 footer{
     margin-top: 90px;
+}
+.custom-ccontainer{
+    margin-bottom: 50px;
+}
+.card{
+    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(153,82,182,1) 0%, rgba(132,42,189,1) 12%, rgba(140,84,192,1) 25%, rgba(129,85,200,1) 35%, rgba(98,9,126,1) 49%, rgba(122,15,134,1) 68%, rgba(184,78,159,1) 99%, rgba(252,70,107,1) 100%);
+}
+.card-text-custom-1{
+    text-align: center;
+    color: white;
+    font-weight: 800;
+}
+.custom-col-2{
+    border: 2px solid;
+    border-image: -webkit-linear-gradient(0deg, rgb(23, 239, 151) -5.04%, rgb(96, 132, 255) 46.01%, rgb(211, 36, 247) 96.01%);
+    border-radius: 10px;
+    border-image-slice: 1;
+    text-align: center;
+    padding: 20px;
+}
+.custom-h1{
+    font-family:'Koulen', cursive;
+    color: white;  
+}
+.btn-custom{
+    border: 0px solid;
+    background: radial-gradient(circle, rgba(244,176,206,1) 0%, rgba(240,240,241,1) 100%);
+    border-radius: 10px;
+    border: none;
+    text-align: center;
+    text-align: center;
+    color:blueviolet;
+    font-family:'Koulen', cursive;
+}
+.custom-h-4{
+    font-family:'Koulen', cursive;
+    color: white; 
 }
