--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     background: linear-gradient(90deg, rgba(9,4,36,1) 26%, rgba(36,23,96,1) 49%, rgba(5,18,46,1) 80%);
+    overflow-x: hidden;
 }
 .logo{
     padding-top: 1em;
@@ -78,7 +79,7 @@ section{
     margin-top: 150px;
 }
 .img-1{
-    width: 500px;
+    width: 100%;
     height: 400px;
     border-radius: 13px;
 }
@@ -96,9 +97,9 @@ h1, .h4{
     height: 150px;
     padding: 10px;
     border-image: -webkit-linear-gradient(0deg, rgb(23, 239, 151) -5.04%, rgb(96, 132, 255) 46.01%, rgb(211, 36, 247) 96.01%);
-    border-radius: 10px;
     border-image-slice: 1;
     text-align: center;
+    overflow-x:hidden;
 }
 .p-info{
     display: flex;
@@ -106,7 +107,6 @@ h1, .h4{
     text-align: center;
     font-family:'Montserrat', sans-serif;
     color: white;
-   
     font-weight: 800;
 }
 .custom-ul{
@@ -174,4 +174,7 @@ footer{
 .custom-h-4{
     font-family:'Koulen', cursive;
     color: white; 
+}
+.icons{
+    width: 100%;
 }
